# winterYuFox

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.py  vcpkg.json
apps/winteryufox/: CMakeLists.txt
apps/winteryufox/src/: main.cpp
framework/winteryufox.core/: CMakeLists.txt
framework/winteryufox.core/include/winteryufox.core/: library.h
framework/winteryufox.core/src/: library.cpp
script/: command.py  func.py
tools/wfox/: CMakeLists.txt
tools/wfox/include/wfox/: command.h  main.h
tools/wfox/include/wfox/commands/: android.h  build.h  bundle.h  dev.h  icon.h  init.h  ios.h
tools/wfox/schema/: wfox-workspace.schema.json  wfox.schema.json
tools/wfox/src/: command.cpp  main.cpp
tools/wfox/src/commands/: android.cpp  build.cpp  init.cpp
tools/wfox/templates/workspace/: wfox-workspace.json  wfox.json
